--- a/client/src/style.css
+++ b/client/src/style.css
@@ -36,6 +36,10 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+h2 {
+    font-size: 20px;
+    text-align: center;
+}
 
 body{
     background-color: #0E2338;
@@ -96,23 +100,51 @@ body{
 }
 
 .blocks {
-    background-color: #0E2340;
-    border-radius: 20px;
-    padding: 30px;
+    display: grid;
+    grid-template-columns: auto auto;
+    column-gap: 20px;
     margin: 20px;
-    box-shadow: 0 2px 10px 0 rgb(0 0 0 / 20%);
-}
-
-.blocks h2 {
-    text-align: center;
 }
 
 .block {
     text-align: center;
     padding: 20px;
     background-color: #0F1E2F;
-    border-radius: 10;
+    border-radius: 15px;
     margin-bottom: 20px;
+}
+
+.block div {
+    font-size: 18px;
+    margin-bottom: 15px;
+}
+
+.block .show {
+    font-size: 17px;
+    background-color: #ffffff0f;
+    border-radius: 5px;
+    padding: 5px;
+    cursor: pointer;
+}
+
+.block .show:hover {
+    border: 1px solid #d1dae7;
+    background-color: transparent;
+}
+
+.block .datablock {
+    margin: 15px;
+    padding: 15px;
+    border-radius: 6px;
+    background-color: #0E2338;
+}
+
+.block > div .datablock:last-child {
+    margin-bottom: 0;
+}
+
+.block .datablock > div , .datablock div:last-child , .block > div:last-child{
+    margin: 0px;
 }
 
 footer {
